--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
-testing 
+body {
+    background-image: url("https://www.trendin-town.com/wp-content/uploads/2017/02/header.jpg");
+    background-repeat: no-repeat;
+}
+.jumbotron-fluid {
+  /* background-color: rgb(203, 205, 207);*/
+  background-image: url("http://www.sompaisoscatalans.cat/simage/small/13/137503/modern-wallpaper-hd.png");
+  background-repeat: no-repeat;
+  margin-left: 50px;
+}
+
+.btn-outline-success {
+position:center;
+padding: 10px;
+margin:10px;
+margin-left:35px;
+}
