--- a/style.css
+++ b/style.css
@@ -15,3 +15,11 @@ padding: 10px;
 margin:10px;
 margin-left:35px;
 }
+
+.btnChoice {
+    margin: 5px;
+    position: relative;
+}
+.form-group{
+    height: auto;
+}
