Another updated html

--- a/style.css
+++ b/style.css
@@ -4,14 +4,24 @@ body {
 }
 .jumbotron-fluid {
   /* background-color: rgb(203, 205, 207);*/
-  background-image: url("http://www.sompaisoscatalans.cat/simage/small/13/137503/modern-wallpaper-hd.png");
+  background-image: url("http://www.golden-circle.com/4ac10b/contentassets/ad75afe3128e4148b049f24efdcfa089/gallery_image1c.jpg?mode=crop&width=1366&height=768");
+  background-attachment: fixed; 
+  border-image-width: 1600px;
   background-repeat: no-repeat;
-  margin-left: 50px;
+  width: auto;
+  height: 400px;
+  min-height: 400px;
+  margin-bottom: 200px;
+  box-shadow: rgba (204,0,255,0.4)inset;
+  background-blend-mode: color-burn;
+  background-size: cover;
+  
+ 
 }
 
 .btn-outline-success {
 position:center;
 padding: 10px;
 margin:10px;
-margin-left:35px;
+margin-left:35px; 
 }
