--- a/style.css
+++ b/style.css
@@ -4,9 +4,68 @@ body {
 }
 .jumbotron-fluid {
   /* background-color: rgb(203, 205, 207);*/
-  background-image: url("http://www.sompaisoscatalans.cat/simage/small/13/137503/modern-wallpaper-hd.png");
+  background-image: url("http://www.golden-circle.com/4ac10b/contentassets/ad75afe3128e4148b049f24efdcfa089/gallery_image1c.jpg?mode=crop&width=1366&height=768");
+  background-attachment: fixed; 
+  border-image-width: 1600px;
   background-repeat: no-repeat;
-  margin-left: 50px;
+  width:100%;
+  height: 400px;
+  background-size: cover;
+  background-blend-mode:color-burn;
+}
+#refineButton {
+  margin-left: 50%;
+  height: 55px;
+  width: 600px;
+  border-radius: 45px;
+  /*position: absolute;*/
+  transform: translate(-50%,-50%);
+  text-align: center;
+  line-height: 45px;
+  color: black;
+  font-size: 34px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: sans-serif;
+  box-sizing: border-box;
+  background: linear-gradient(90deg, #03a9f4, #f441a5,#ffeb3b,#03a9f4);
+  background-size: 400%;
+  z-index: 1;
+  border-color: black;
+  border-style: solid;
+  border-width: 3px;
+}
+#refineButton:hover
+ {
+  animation: animate 8s linear infinite;
+}
+@keyframes animate {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 400%;
+  }
+}
+#refineButton:before{
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index:  -1;
+  background: linear-gradient(90deg, #03a9f4, #f441a5,#ffeb3b,#03a9f4);
+  background-size: 400%;
+  border-radius: 45px;
+  filter: blur(20px);
+  opacity: 0;
+  transition: 0.5s;
+}
+#refineButton:hover:before{
+  filter: blur(20px);
+  opacity: 1;
+  animation: animate 8s linear infinite;
 }
 
 .btn-outline-success {
@@ -18,8 +77,32 @@ margin-left:35px;
 
 .btnChoice {
     margin: 5px;
-    position: relative;
+    border-radius: 25px;
+    background-color: white;
 }
 .form-group{
-    height: auto;
+    height: 100px;
+    background-color: white;
+    border-radius: 25px;
+}
+.modal-body{
+    background-image: url("http://www.sompaisoscatalans.cat/simage/small/13/137503/modern-wallpaper-hd.png");
+}
+.cravinglabel{
+    margin-top:5px;
+    margin-right: 300px;
+    float: right;
+
+}
+#partyConfirm{
+    margin-bottom: 20px;
+    color: white;
+    border-color: black;
+    border-width: 2px;
+}
+.otherlabel{
+    margin-left: 20px;
+}
+.modal-header{
+    background-color: darkgray;
 }
