--- a/style.css
+++ b/style.css
@@ -81,12 +81,13 @@ margin-left:35px;
     background-color: white;
 }
 .form-group{
-    height: 100px;
+    height: auto;
     background-color: white;
     border-radius: 25px;
 }
 .modal-body{
     background-image: url("http://www.sompaisoscatalans.cat/simage/small/13/137503/modern-wallpaper-hd.png");
+  
 }
 .cravinglabel{
     margin-top:5px;
@@ -101,8 +102,22 @@ margin-left:35px;
     border-width: 2px;
 }
 .otherlabel{
+    height: auto;
     margin-left: 20px;
 }
 .modal-header{
     background-color: darkgray;
 }
+#widgetImage{
+    height: 50px;
+    width: 50px;
+}
+#weather{
+    background-image: url("https://shiftyjelly.files.wordpress.com/2013/11/w.jpg?w=750&h=425");
+    color: white;
+    width: 47%;
+}
+
+
+
+/* ============ testing ============= */
